--- a/index-dev.html
+++ b/index-dev.html
@@ -37,7 +37,9 @@
 
                 "plugins/freeboard/freeboard.datasources.js",
                 "plugins/freeboard/freeboard.widgets.js",
+
                 "examples/plugin_example.js",
+                "examples/anychart.js",
 
                 // *** Load more plugins here ***
                 function(){
