--- a/index-dev.html
+++ b/index-dev.html
@@ -39,6 +39,7 @@
                 "plugins/freeboard/freeboard.widgets.js",
 
                 "examples/plugin_example.js",
+                "examples/altGuage.js",
                 "examples/anychart.js",
 
                 // *** Load more plugins here ***
