--- a/index-dev.html
+++ b/index-dev.html
@@ -38,8 +38,8 @@
                 "plugins/freeboard/freeboard.datasources.js",
                 "plugins/freeboard/freeboard.widgets.js",
 
-                "examples/plugin_example.js",
-                "examples/altGuage.js",
+//                "examples/plugin_example.js",
+//                "examples/altGuage.js",
                 "examples/anychart.js",
 
                 // *** Load more plugins here ***
