Fixed open editor on load dashboard issue

--- a/index-dev.html
+++ b/index-dev.html
@@ -40,7 +40,7 @@
 
 //                "examples/plugin_example.js",
 //                "examples/altGuage.js",
-                "examples/anychart.js",
+                "plugins/anychart.js",
 
                 // *** Load more plugins here ***
                 function(){
