global config in progress

--- a/index-dev.html
+++ b/index-dev.html
@@ -42,7 +42,10 @@
 //                "examples/altGuage.js",
                 "plugins/anychart.js",
 
-                // *** Load more plugins here ***
+                // Includes for anychart
+                "https://cdn.anychart.com/releases/8.5.0/themes/dark_blue.min.js",
+                "https://cdn.anychart.com/releases/8.5.0/themes/monochrome.min.js",
+
                 function(){
                     $(function()
                     { //DOM Ready
